extend model for IR, complete IR generator